--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,26 @@ body {
     margin: 0;
     pointer-events: none;
 }
+
+#container {
+    perspective: 50px;
+    -webkit-perspective: 50px;
+    -moz-perspective: 50px;
+    -ms-perspective: 50px;
+
+    transform-origin: 50% 100%;
+    -webkit-transform-origin: 50% 100%;
+    -moz-transform-origin: 50% 100%;
+    -ms-transform-origin: 50% 100%;
+
+    opacity: 0.55;
+}
+
+.dot {
+    position: fixed;
+    width: 30px;
+    height: 30px;
+
+    border-radius: 30px;
+    background-color: #4bc2f1;
+}
