--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 body {
-    background: #060b14;
+    background-color: #060b14;
     overflow: hidden;
+    font-family: 'Iceland', cursive;
+    font-size: 16px;
+    color: #4fb8b6;
+
 }
 * {
     padding: 0;
     margin: 0;
     pointer-events: none;
 }
-
+/*
 #container {
     perspective: 50px;
     -webkit-perspective: 50px;
@@ -29,4 +33,112 @@ body {
 
     border-radius: 30px;
     background-color: #4bc2f1;
+}
+*/
+
+/*
+light green: #4fb8b6;
+dark green: #1c4b4a;
+almost black: #000202;
+ */
+
+.wrapper {
+    padding: 20px;
+    max-width: 1120px;
+    margin: 0 auto;
+}
+
+.wrapper-block {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 30px;
+}
+
+.promo {
+    width: 30%;
+    padding: 25px 30px;
+}
+
+.promo-link {
+    display: block;
+    text-decoration: none;
+}
+.promo h2 {
+    color: #4fb8b6;
+    position: absolute;
+    top: 50%;
+    left:10%;
+}
+
+.circle {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    text-align: center;
+    background-color: #4fb8b6;
+}
+
+.circle2 {
+    position: relative;
+    width: 170px;
+    height: 170px;
+    border-radius: 50%;
+    text-align: center;
+    background-color: #060b14;
+}
+
+.downloads {
+    width: 60%;
+    padding: 25px 30px;
+    align-self: center;
+}
+
+.downloads a {
+    text-decoration: none;
+    color: #4fb8b6;
+    font-size: 26px;
+}
+
+.downloads h2 {
+    padding: 0;
+    margin: 0;
+}
+
+.movies {
+    border: 5px solid #4fb8b6;
+    text-align: center;
+}
+
+.instagram-movie-feed {
+    width: 25%;
+    border: 5px solid #4fb8b6;
+    text-align: center;
+    margin-right: 35px;
+}
+
+.main-wheel {
+    width: 50%;
+    border: 5px solid #4fb8b6;
+    text-align: center;
+    margin-right: 35px;
+}
+
+.images {
+    width: 25%;
+    border: 5px solid #4fb8b6;
+    text-align: center;
+}
+
+.image {
+    padding: 20px;
+    width: 200px;
+    border: 5px solid #1c4b4a;
+    margin: 0 10px 25px 10px;
+}
+
+.message {
+    padding: 30px;
+    width: 93%;
+    text-align: center;
+    border: 5px solid #4fb8b6;
 }
