--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
 * {
     padding: 0;
     margin: 0;
-    pointer-events: none;
 }
 /*
 #container {
@@ -62,6 +61,7 @@ almost black: #000202;
 .promo-link {
     display: block;
     text-decoration: none;
+
 }
 .promo h2 {
     color: #4fb8b6;
@@ -117,10 +117,37 @@ almost black: #000202;
 }
 
 .main-wheel {
-    width: 50%;
+    width: 350px;
+    height: 350px;
     border: 5px solid #4fb8b6;
     text-align: center;
     margin-right: 35px;
+    border-radius: 50%;
+    position: relative;
+}
+
+.circle-wheel {
+    width: 270px;
+    height: 270px;
+    border-radius: 50%;
+    position: absolute;
+    border: 30px solid #1c4b4a;;
+    top: 10px;
+    left: 10px;
+    /*background-color: transparent;*/
+    background-color: #bccddc;
+    -webkit-box-shadow: inset 0px 0px 30px 20px rgba(255, 255, 255, 0.75);
+    -moz-box-shadow:    inset 0px 0px 30px 20px rgba(255, 255, 255, 0.75);
+    box-shadow:         inset 0px 0px 30px 20px rgba(255, 255, 255, 0.75);
+}
+
+.circle-wheel-inner h2 {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    padding-top: 100px;
+    font-size: 36px;
+    line-height: 40px;
 }
 
 .images {
@@ -141,4 +168,8 @@ almost black: #000202;
     width: 93%;
     text-align: center;
     border: 5px solid #4fb8b6;
+}
+
+.yellow {
+    background-color: yellow;
 }
