--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,20 @@
 body {
     background-color: #060b14;
-    overflow: hidden;
     font-family: 'Iceland', cursive;
     font-size: 16px;
     color: #4fb8b6;
 
 }
-* {
-    padding: 0;
-    margin: 0;
-}
-/*
-#container {
-    perspective: 50px;
-    -webkit-perspective: 50px;
-    -moz-perspective: 50px;
-    -ms-perspective: 50px;
 
-    transform-origin: 50% 100%;
-    -webkit-transform-origin: 50% 100%;
-    -moz-transform-origin: 50% 100%;
-    -ms-transform-origin: 50% 100%;
-
-    opacity: 0.55;
-}
-
-.dot {
-    position: fixed;
-    width: 30px;
-    height: 30px;
-
-    border-radius: 30px;
-    background-color: #4bc2f1;
-}
-*/
-
-/*
+/* Colors used in the design
 light green: #4fb8b6;
 dark green: #1c4b4a;
 almost black: #000202;
  */
 
+
 .wrapper {
-    padding: 20px;
+    padding: 0 20px 20px 20px;
     max-width: 1120px;
     margin: 0 auto;
 }
@@ -61,8 +33,8 @@ almost black: #000202;
 .promo-link {
     display: block;
     text-decoration: none;
-
 }
+
 .promo h2 {
     color: #4fb8b6;
     position: absolute;
@@ -128,6 +100,7 @@ almost black: #000202;
     right: 0;
     background-color: #4fb8b6;
 }
+
 .movies::after {
     position: absolute;
     content: "";
@@ -138,11 +111,17 @@ almost black: #000202;
     background-color: #4fb8b6;
 }
 
-.instagram-movie-feed {
+.map-feed {
     width: 25%;
     border: 5px solid #4fb8b6;
     text-align: center;
     margin-right: 35px;
+    overflow: hidden;
+}
+
+.map {
+    width: 270px;
+    height: 550px;
 }
 
 .main-wheel {
@@ -163,8 +142,8 @@ almost black: #000202;
     border: 30px solid #1c4b4a;;
     top: 10px;
     left: 10px;
-    /*background-color: transparent;*/
     background-color: #bccddc;
+
     -webkit-box-shadow: inset 0px 0px 30px 20px rgba(255, 255, 255, 0.75);
     -moz-box-shadow:    inset 0px 0px 30px 20px rgba(255, 255, 255, 0.75);
     box-shadow:         inset 0px 0px 30px 20px rgba(255, 255, 255, 0.75);
@@ -279,4 +258,11 @@ almost black: #000202;
 .image-lightened {
     background: url("../images/earth2.jpg") no-repeat;
     background-size: cover;
+}
+
+/*map*/
+
+.map {
+    width: 280px;
+    height: 550px;
 }
