--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ almost black: #000202;
 .wrapper-block {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 5px;
+    align-items: center;
+    margin-bottom: 15px;
 }
 
 .promo {
@@ -115,12 +116,13 @@ almost black: #000202;
     border: 5px solid #4fb8b6;
     text-align: center;
     margin-right: 35px;
-    overflow: hidden;
+    position: relative;
 }
 
 .map {
     width: 280px;
     height: 550px;
+
 }
 
 .main-wheel {
@@ -257,4 +259,40 @@ almost black: #000202;
 .image-lightened {
     background: url("../images/earth2.jpg") no-repeat;
     background-size: cover;
+}
+
+/*fancy border styles*/
+
+.map-feed::before, .map-feed::after {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.map-feed::before, .map-feed::after {
+    content: '';
+    z-index: 1;
+    margin: -5%;
+    box-shadow: inset 0 0 0 2px;
+    animation: clipMe 8s linear infinite;
+}
+.map-feed::before {
+    animation-delay: -4s;
+}
+
+@keyframes clipMe {
+    0%, 100% {
+        clip: rect(0px, 280px, 2px, 0px);
+    }
+    25% {
+        clip: rect(0px, 2px, 580px, 0px);
+    }
+    50% {
+        clip: rect(280px, 280px, 580px, 0px);
+    }
+    75% {
+        clip: rect(0px, 280px, 580px, 280px);
+    }
 }
